* All built-in constraints are marked as repeatable now
* Parameter names are retrieved using reflection (see <<constraintdeclarationvalidationprocess-methodlevelconstraints-parameterconstraints-namingparameters>>)
* `ConstraintValidator#initialize()` is a default method (see <<constraintsdefinitionimplementation-validationimplementation>>)

[[whatsnew-11]]
=== What's new in 1.1

Bean Validation 1.1 improves and builds upon Bean Validation 1.0. The expert group and the community have been working on a few specific areas.

[[whatsnew-11-openness]]
==== Openness

All of Bean Validation 1.1 work has been done in the open and in an open source way. Source code for the API, reference implementation, test compatibility kit as well as the specification and the website sources are available in the open. All discussions are done in the open in the publicly available development mailing list. Road map and proposals are also published on the website.

You can find all the details (mailing lists, source repositories etc.) at http://beanvalidation.org.

[[whatsnew-11-cdi]]
==== Dependency injection

Bean Validation uses a few components [classname]`MessageInterpolator`, [classname]`TraversableResolver`, [classname]`ParameterNameProvider`, [classname]`ConstraintValidatorFactory` and [classname]`ConstraintValidator`. Bean Validation 1.1 standardizes how these objects are managed by a container and how these objects can benefit from container services. In particular, CDI support within Java EE is being defined.

[[whatsnew-11-methodvalidation]]
==== Method validation

Bean Validation 1.1 allows to put constraints to the parameters and return values of arbitrary methods and constructors. That way the Bean Validation API can be used to describe and validate the contract applying to a given method or constructor, that is:

* the preconditions that must be met by the caller before the method or constructor may be invoked and