@@ -364,7 +364,7 @@ You must declare all parameters even if they are not reconfigured to ensure the 
 [[xml-mapping-constraintdeclarationinxml-containerelementconstraints]]
 ===== Container-element overriding
 
-[tck-testable]#To apply constraints to the elements of generic container types or marking them for cascaded validation, the `container-element-type` element is used.#
+[tck-testable]#To apply constraints to the elements of generic container types or to mark them for cascaded validation, the `container-element-type` element is used.#
 
 [tck-testable]#`container-element-type` can be used within the `field`, `getter`, `parameter` and `return-value` elements.#
 
