@@ -27,6 +27,7 @@ fine-grained control over the current time and time zone used for validation (se
 * All built-in constraints are marked as repeatable now
 * Parameter names are retrieved using reflection (see <<constraintdeclarationvalidationprocess-methodlevelconstraints-parameterconstraints-namingparameters>>)
 * `ConstraintValidator#initialize()` is a default method (see <<constraintsdefinitionimplementation-validationimplementation>>)
+* The namespace for Bean Validation XML descriptors has been changed to `http://xmlns.jcp.org/xml/ns/validation/configuration` for `META-INF/validation.xml` and `http://xmlns.jcp.org/xml/ns/validation/mapping` for constraint mapping files (see <<validationapi-bootstrapping-xmlconfiguration>>)
 
 [[whatsnew-11]]
 === What's new in 1.1
